Add dependencies for mockito